Dark mode and CSS fix

--- a/src/assets/css/include/_buttons.css
+++ b/src/assets/css/include/_buttons.css
@@ -45,9 +45,9 @@
 #back-to-top {
   display: none;
   position: fixed;
-  bottom: 20px;
+  bottom: var(--fixed-button-bottom);
   right: 30px;
-  z-index: 2099;
+  z-index: 99;
   padding: 10px 15px;
   font-size: 1.2rem;
   box-shadow: 0 2px 5px #00000033;
